# stupidsat

./: CMakeLists.txt  Makefile  README.md  litteral.cpp  litteral.h  main.cpp  pysat.py  solver.cpp  solver.h  solver.i
